--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,63 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
+html, body, #app {
+  min-height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background: #f2f2f2;
+  -webkit-font-smoothing: antialiased !important;
+}
+
+body {
+  font-size: 15px;
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  max-width: 700px;
+  margin: 20px auto;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+form div {
+  margin-bottom: 10px;
+}
+
+select {
+  padding: 5px;
+  width: 150px;
+  margin-right: 10px;
+  border-radius: 4px;
+}
+
+button {
+  padding: 5px;
+  width: 80px;
+  background: #7cb8f0;
+  border-color: #5680a8;
+  margin-right: 10px;
+  border-radius: 4px;
+  font-weight: bold;
+}
+
+textarea {
+  height: 150px;
+  padding: 10px;
+  border-radius: 4px;
+  resize: none;
+}
+
+p {
+  margin-top: 10px;
+  font-weight: bold;
 }
