--- a/src/App.css
+++ b/src/App.css
@@ -33,11 +33,12 @@ form div {
   margin-bottom: 10px;
 }
 
-select {
+select, .autoComplete {
   padding: 5px;
   width: 150px;
   margin-right: 10px;
   border-radius: 4px;
+  border: 1 solid #000;
 }
 
 button {
